[gd_scene load_steps=2 format=3 uid="uid://bvqjg2rj0kj3y"]

[ext_resource type="Script" uid="uid://rpppohvcu06x" path="res://scripts/ui/debug_interface.gd" id="1"]

[node name="DebugCanvas" type="CanvasLayer"]
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 360.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Debug Interface"

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Speed: --"

[node name="ClassRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="ClassLabel" type="Label" parent="PanelContainer/MarginContainer/VBox/ClassRow"]
layout_mode = 2
text = "Class"

[node name="ClassSelector" type="OptionButton" parent="PanelContainer/MarginContainer/VBox/ClassRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Health: --"

[node name="PassiveLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Passive: --"

[node name="PassiveDescription" type="Label" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1

[node name="AbilitiesLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Abilities"

[node name="AbilityList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="EffectsLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Effects"

[node name="EffectList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Last ability: --"
autowrap_mode = 1
